3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

server/server.c: player count tracking will get false if moving from a map to the same.
Nicolas Weeger 2007-05-17

Remove obsolete funcpoint.h file.
 include/funcpoint.h: removed
 include/global.h Makefile.am
 crossedit/xutil.c
 common/arch.c button.c item.c living.c logger.c los.c map.c object.c player.c time.c treasure.c utils.c
Nicolas Weeger 2007-05-17

Don't pass variables that aren't needed, remove prototype confusion. Document.
 server/weather.c
Nicolas Weeger 2007-05-17

Change weather_effect() to use mapstruct* instead of filename.
 common/map.c
 crossedit/stubs.c
 include/funcpoint.h sproto.h
 random_maps/standalone.c
 server/weather.c
 test/unit/common/stubs_common.c
 test/unit/crossedit/stubs_crossedit.c
 test/unit/random_maps/stubs_random.c
 test/unit/socket/stubs_socket.c
 utils/bwp.c mapper.c
Nicolas Weeger 2007-05-17

server/weather.c: fix mountain cave being covered and rendered invisible.
Nicolas Weeger 2007-05-17

test/unit/server/check_attack.c: some tests for hit_player.
Nicolas Weeger 2007-05-17

server/ob_types.c, types/Makefile.am, types/item_transformer/item_transformer.c:
  Remove code for the obsolete item_transformer type.
Alex Schultz 2007-05-16

Add spell merging code - this makes the server run much faster when many
spell objects are in use.  For more details, see doc/Developers/spells
---
common/init.c: And declaration/initialization of statistics values.
common/object.c: Add handling of spell_tags in object structure (free,
  copy. Add merge_spell() function.  Add call to function from
  insert_ob_in_map().  Remove was_destroyed() function - now macro.